# infotecsContest

./: .gitignore  CMakeLists.txt  Makefile  README.md
log_app/: CMakeLists.txt  main.cpp
log_lib/: CMakeLists.txt
log_lib/include/: logger.hpp
log_lib/src/: logger.cpp
log_tests/: CMakeLists.txt  test_logger.cpp
stat_app/: CMakeLists.txt  stats_collector.cpp
